# Ecommerce-Luxury-Product-Price-Analysis

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  create_init_files.py  debug_imports.py  docker-compose.yaml  import_fixer.py  import_fixer_all.py  main.py  main_final.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_all_imports.py  verify_pipeline.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-cd.yml
data/reports/: analytics_report.txt  pipeline_execution_report.json  pipeline_execution_report.txt
docs/: README.md  architecture.md
notebooks/: expolaratory_analysis.ipynb
src/: __init__.py
src/api/: __init__.py  api_server.py
src/dashboards/: __init__.py  streamlit_app.py
src/data_pipeline/: __init__.py  process_data.py
src/forecasting/: __init__.py  demand_forecast.py  price_forecast.py
src/ingest/: __init__.py  load_data.py
src/llm/: __init__.py  insight_generator.py
src/preprocess/: __init__.py  clean_products.py
src/pricing/: __init__.py  discount_recommendation.py  elasticity_model.py  price_competitiveness.py  price_competiveness.py
src/reports/: __init__.py  generate_report.py
src/utils/: __init__.py  create_stucture.py  helper.py  logger.py  model_loader.py
tests/: conftest.py  test_data_pipeline.py  test_pricing_models.py
